styles.css
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

html {
  font-size: 100%;
  scroll-behavior: smooth;
}

body {
  font-family: "Outfit", sans-serif;
  color: hsl(218, 44%, 22%);
  background-color: hsl(212, 45%, 89%);
  min-height: 100vh;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#main-content {
  display: flex;
  flex-direction: column;
  align-content: space-around;
  width: 400px;
  background-color: hsl(0, 0%, 100%);
  box-shadow: 5px 5px 60px 1px rgba(200, 200, 200, 0.8);
  padding: 20px;
  border-radius: 30px;
}
#main-content #qr-img img {
  max-width: 100%;
  height: auto;
  display: block;
  border-radius: 20px;
}
#main-content #descriptive-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 10px;
}
#main-content #descriptive-text h1 {
  margin: 20px 0;
  text-align: justify;
  font-size: 1.8rem;
  font-weight: 700;
}
#main-content #descriptive-text p {
  text-align: center;
  color: hsl(218, 44%, 22%);
  font-size: 1.15rem;
}

@media screen and (max-width: 375px) {
  #main-content {
    width: 320px;
  }
}

/*# sourceMappingURL=styles.css.map */

